objects/pse__Utilization_Setup__c.object
<CustomObject>
    <customHelpPage>pse__UtilizationSetupHelp</customHelpPage>
    <description>Stores the settings for utilization runs.</description>
    <fields>
        <fullName>pse__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates the utilization setup record used for utilization runs. You can only have one active utilization setup record.</description>
        <inlineHelpText>Indicates the utilization setup record used for utilization runs. You can only have one active utilization setup record.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Batch_Size__c</fullName>
        <defaultValue>250</defaultValue>
        <description>The maximum number of assignment records to process in a single batch for a utilization run.</description>
        <inlineHelpText>The maximum number of assignment records to process in a single batch for a utilization run.</inlineHelpText>
        <label>Assignment Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Held_Resource_Request_Batch_Size__c</fullName>
        <defaultValue>250</defaultValue>
        <description>The maximum number of held resource request records to process in a single batch for a utilization run.</description>
        <inlineHelpText>The maximum number of held resource request records to process in a single batch for a utilization run.</inlineHelpText>
        <label>Held Resource Request Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Only_Include_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, only records from the earliest change are included in utilization runs.</description>
        <inlineHelpText>When selected, only records from the earliest change are included in utilization runs.</inlineHelpText>
        <label>Only Include Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Batch_Size__c</fullName>
        <defaultValue>25</defaultValue>
        <description>The maximum number of resource records to process in a single batch for a utilization run.</description>
        <inlineHelpText>The maximum number of resource records to process in a single batch for a utilization run.</inlineHelpText>
        <label>Resource Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_Exception_Batch_Size__c</fullName>
        <defaultValue>250</defaultValue>
        <description>The maximum number of schedule exceptions to process in a single batch for a utilization run.</description>
        <inlineHelpText>The maximum number of schedule exceptions to process in a single batch for a utilization run.</inlineHelpText>
        <label>Schedule Exception Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Batch_Size__c</fullName>
        <defaultValue>1400</defaultValue>
        <description>The maximum number of timecard to process in a single batch for a utilization run.</description>
        <inlineHelpText>The maximum number of timecard to process in a single batch for a utilization run.</inlineHelpText>
        <label>Timecard Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Unheld_Resource_Request_Batch_Size__c</fullName>
        <defaultValue>500</defaultValue>
        <description>The maximum number of unheld resource request records to process in a single batch for a utilization run.</description>
        <inlineHelpText>The maximum number of unheld resource request records to process in a single batch for a utilization run.</inlineHelpText>
        <label>Unheld Resource Request Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Period__c</fullName>
        <description>The utilization period covered by the utilization run.</description>
        <inlineHelpText>The utilization period covered by the utilization run.</inlineHelpText>
        <label>Utilization Period</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Last, Current and Next Year</fullName>
                    <default>true</default>
                    <label>Last, Current and Next Year</label>
                </value>
                <value>
                    <fullName>Current and Next Year</fullName>
                </value>
                <value>
                    <fullName>Last, Current and Next Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Utilization_Result_Batch_Size__c</fullName>
        <defaultValue>9900</defaultValue>
        <description>The maximum number of utilization result records to process per batch.</description>
        <inlineHelpText>The maximum number of utilization result records to process per batch.</inlineHelpText>
        <label>Utilization Result Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Run_Monitor_Interval__c</fullName>
        <defaultValue>60</defaultValue>
        <description>The frequency in minutes that the Utilization Run Monitor executes after a utilization run has started.</description>
        <inlineHelpText>The frequency in minutes that the Utilization Run Monitor executes after a utilization run has started.</inlineHelpText>
        <label>Utilization Run Monitor Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Work_Calendar_Batch_Size__c</fullName>
        <defaultValue>300</defaultValue>
        <description>The maximum number of work calendars to process in a single batch for a utilization run.</description>
        <inlineHelpText>The maximum number of work calendars to process in a single batch for a utilization run.</inlineHelpText>
        <label>Work Calendar Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Utilization Setup</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Active__c</columns>
        <columns>pse__Only_Include_Changes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>Utilization Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Setup</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>